--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,33 @@
 {
     "name": "laravel/laravel",
     "description": "The Laravel Framework.",
-    "keywords": [
-        "framework",
-        "laravel"
-    ],
+    "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*",
-        "laravelcollective/html": "5.1.*",
+        "laravel/framework": "5.2.*",
+        "laravelcollective/html": "~5.2",
         "laracasts/flash": "^1.3",
         "intervention/image": "^2.3",
         "intervention/imagecache": "^2.3",
         "laracasts/utilities": "~2.0",
         "sofa/eloquence": "~5.1@dev",
+        "barryvdh/laravel-debugbar": "@dev",
         "tymon/jwt-auth": "0.5.*",
-        "spatie/laravel-medialibrary": "^3.18",
+        "spatie/laravel-medialibrary": "~4.0",
         "rap2hpoutre/laravel-log-viewer": "^0.6.1",
         "zizaco/entrust": "dev-laravel-5",
+        "maatwebsite/excel": "~2.1.0",
         "sentry/sentry-laravel": "^0.7.0"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1"
+        "phpspec/phpspec": "~2.1",
+        "symfony/dom-crawler": "~3.0",
+        "symfony/css-selector": "~3.0"
     },
     "autoload": {
         "classmap": [
