--- a/composer.json
+++ b/composer.json
@@ -5,19 +5,19 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.5.9",
-        "laravel/framework": "5.2.*",
-        "laravelcollective/html": "~5.2",
+        "php": ">=5.6.4",
+        "laravel/framework": "5.3.*",
+        "laravelcollective/html": "~5.3",
         "laracasts/flash": "^1.3",
         "intervention/image": "^2.3",
         "intervention/imagecache": "^2.3",
         "laracasts/utilities": "~2.0",
-        "sofa/eloquence": "~5.1@dev",
+        "sofa/eloquence": "~5.3@dev",
         "barryvdh/laravel-debugbar": "@dev",
         "tymon/jwt-auth": "0.5.*",
         "spatie/laravel-medialibrary": "~4.0",
         "rap2hpoutre/laravel-log-viewer": "^0.6.1",
-        "zizaco/entrust": "dev-laravel-5",
+        "zizaco/entrust": "^1.0.0",
         "maatwebsite/excel": "~2.1.0",
         "sentry/sentry-laravel": "^0.7.0"
     },
@@ -26,8 +26,8 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1",
-        "symfony/dom-crawler": "~3.0",
-        "symfony/css-selector": "~3.0"
+        "symfony/dom-crawler": "~3.1",
+        "symfony/css-selector": "~3.1"
     },
     "autoload": {
         "classmap": [
