--- a/composer.json
+++ b/composer.json
@@ -5,29 +5,30 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": "5.4.*",
-        "laravelcollective/html": "~5.4",
-        "laracasts/flash": "^1.3",
+        "php": ">=7.0",
+        "laravel/framework": "5.5.*",
+        "laravelcollective/html": "~5.5",
+        "laracasts/flash": "^3",
         "intervention/image": "^2.3",
         "intervention/imagecache": "^2.3",
         "laracasts/utilities": "~2.0",
         "sofa/eloquence": "~5.3@dev",
         "barryvdh/laravel-debugbar": "@dev",
         "tymon/jwt-auth": "0.5.*",
-        "spatie/laravel-medialibrary": "~4.0",
+        "spatie/laravel-medialibrary": "^6.0.0",
         "rap2hpoutre/laravel-log-viewer": "^0.6.1",
-        "zizaco/entrust": "^1.0.0",
-        "maatwebsite/excel": "~2.1.0",
+        "zizaco/entrust": "^1.9.0",
+        "maatwebsite/excel": "~3.1.0",
         "sentry/sentry-laravel": "^0.7.0"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
+        "fzaninotto/faker": "~1.8",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7",
+        "phpunit/phpunit": "~6.0",
         "phpspec/phpspec": "~2.1",
         "symfony/dom-crawler": "~3.1",
-        "symfony/css-selector": "~3.1"
+        "symfony/css-selector": "~3.1",
+        "filp/whoops": "~2.0"
     },
     "autoload": {
         "classmap": [
@@ -59,7 +60,11 @@
         ],
         "post-create-project-cmd": [
             "php artisan key:generate"
-        ]
+        ],
+        "post-autoload-dump": [
+        "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+        "@php artisan package:discover"
+    ]
     },
     "config": {
         "preferred-install": "dist"
