--- a/composer.json
+++ b/composer.json
@@ -6,20 +6,20 @@
     "type": "project",
     "require": {
         "php": ">=7.1",
-        "laravel/framework": "5.7.*",
-        "laravelcollective/html": "~5.7",
+        "laravel/framework": "5.8.*",
+        "laravelcollective/html": "~5.8",
         "laracasts/flash": "^3",
         "intervention/image": "^2.4",
         "intervention/imagecache": "^2.3",
         "laracasts/utilities": "~3.0",
         "sofa/eloquence": "~5.6@dev",
         "barryvdh/laravel-debugbar": "~3.0",
-        "tymon/jwt-auth": "1.0.0-rc.3",
-        "spatie/laravel-medialibrary": "^6.0.0",
+        "tymon/jwt-auth": "1.0.0-rc.4",
+        "spatie/laravel-medialibrary": "7.*",
         "rap2hpoutre/laravel-log-viewer": "^1.0",
         "zizaco/entrust": "^1.9.0",
         "maatwebsite/excel": "~3.1.0",
-        "sentry/sentry-laravel": "^0.11.0",
+        "sentry/sentry-laravel": "1.1.*",
         "fideloper/proxy": "~4.1"
     },
     "require-dev": {
@@ -29,7 +29,7 @@
         "phpspec/phpspec": "~4.3",
         "symfony/dom-crawler": "~4.1",
         "symfony/css-selector": "~4.1",
-        "filp/whoops": "~2.0"
+        "filp/whoops": "~2.5"
     },
     "autoload": {
         "classmap": [
